cabal-version:   3.0
name:            foo
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Sridhar Ratnakumar
maintainer:      srid@srid.ca
category:        Other
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Foo
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
